sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: ';' expected but '<-' found.
	Boolean stop <- false;
                     ^AlgBubbleSort1:6: error: ';' expected but '<-' found.
		stop <- true;
                     ^AlgBubbleSort1:7: error: '<-' expected but ';' found.
		for (i <- 0; i < getNombreValeurs()-1; i++){
                                                     ^AlgBubbleSort1:7: error: illegal start of simple pattern
		for (i <- 0; i < getNombreValeurs()-1; i++){
                                                          ^AlgBubbleSort1:13: error: illegal start of simple expression
	}while(!stop)
        ^